# bevy-inspector-egui

./: Cargo.toml
crates/bevy-inspector-egui/: Cargo.toml
crates/bevy-inspector-egui-derive/: Cargo.toml
