[package]
name = "bevy-inspector-egui"
version = "0.35.0"
edition = "2024"
repository = "https://github.com/jakobhellermann/bevy-inspector-egui/"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "Inspector plugin for the bevy game engine"
documentation = "https://docs.rs/bevy-inspector-egui"
keywords = ["bevy", "inspector", "egui", "editor", "reflect"]
categories = [
    "game-development",
    "gui",
    "visualization",
    "development-tools::procedural-macro-helpers",
]

[features]
default = [
    "documentation",
    "bevy_pbr",
    "bevy_image",
    "bevy_render",
    "bevy_core_pipeline",
    "egui_clipboard",
]
documentation = ["bevy_reflect/documentation"]
bevy_render = ["dep:bevy_render", "bevy_egui/render"]
bevy_gizmos = ["dep:bevy_gizmos"]
bevy_core_pipeline = ["dep:bevy_core_pipeline"]
egui_clipboard = ["bevy_egui/manage_clipboard"]
egui_open_url = ["bevy_egui/open_url"]
highlight_changes = []

[package.metadata.docs.rs]
features = ["winit/x11"]

[dependencies]
winit = { version = "0.30.0", default-features = false }

bevy-inspector-egui-derive = {path = "../bevy-inspector-egui-derive" }
bevy_app = {path = "../../../../bevy_engine/crates/bevy_app" }
bevy_asset = {path = "../../../../bevy_engine/crates/bevy_asset" }
bevy_color = { path = "../../../../bevy_engine/crates/bevy_color" }
bevy_platform = { path = "../../../../bevy_engine/crates/bevy_platform" }
bevy_ecs = { path = "../../../../bevy_engine/crates/bevy_ecs" }
bevy_log = { path = "../../../../bevy_engine/crates/bevy_log" }
bevy_log = { path = "../../../../bevy_engine/crates/bevy_camera" }
bevy_math = { path = "../../../../bevy_engine/crates/bevy_math" }
bevy_math = { path = "../../../../bevy_engine/crates/bevy_mesh" }
bevy_math = { path = "../../../../bevy_engine/crates/bevy_light" }
bevy_reflect = { path = "../../../../bevy_engine/crates/bevy_reflect" }
bevy_state = { path = "../../../../bevy_engine/crates/bevy_state" }
bevy_time = { path = "../../../../bevy_engine/crates/bevy_time" }
bevy_utils = {path = "../../../../bevy_engine/crates/bevy_utils" }
bevy_window = { path = "../../../../bevy_engine/crates/bevy_window" }

bevy_render = { path = "../../../../bevy_engine/crates/bevy_render", optional = true }
bevy_core_pipeline = {path = "../../../../bevy_engine/crates/bevy_core_pipeline", optional = true }
bevy_pbr = { path = "../../../../bevy_engine/crates/bevy_pbr", optional = true }
bevy_image = {path = "../../../../bevy_engine/crates/bevy_image", optional = true }
bevy_gizmos = { path = "../../../../bevy_engine/crates/bevy_gizmos", optional = true }

egui.workspace = true
bevy_egui.workspace = true

bytemuck = "1.16.0"
image = { version = "0.25", default-features = false }
smallvec = "1.10"

fuzzy-matcher = "0.3.7"
disqualified = "1.0.0"
uuid = "1.11.0"
opener = "0.8.3"

[dev-dependencies]
bevy = { path = "../../../../bevy_engine", default-features = false, features = [
    "std",
    "x11",
    "wayland",
    "reflect_auto_register",
    "bevy_log",
    "bevy_winit",
    "bevy_state",
    "bevy_window",
    "bevy_pbr",
    "bevy_sprite",
    "bevy_text",
    "bevy_core_pipeline",
    "bevy_picking",
    "bevy_gizmos",
    "bevy_mesh_picking_backend",
    "animation",
    "png",
    "zstd_rust",
    "tonemapping_luts",
    "ktx2",
] }
bevy_math = { path="../../../../bevy_engine/crates/bevy_math", features = ["mint"] }
egui_dock = { git = "https://github.com/Avarel/egui_dock", branch = "egui_0.33" }
transform-gizmo-bevy = { git = "https://github.com/pindash-io/transform-gizmo", branch = "bevy-0.17" }
# bevy_mod_picking = { git = "https://github.com/aevyrie/bevy_mod_picking", rev = "554649a951689dce66d0d759839b326874e8826f", default-features = false, features = ["backend_raycast", "backend_egui", "backend_sprite"] }
# bevy_framepace = "0.11"


[[example]]
name = "inspector_options"
path = "examples/basic/inspector_options.rs"

[[example]]
name = "custom_type_ui"
path = "examples/basic/custom_type_ui.rs"

[[example]]
name = "resource_inspector_manual"
path = "examples/basic/resource_inspector_manual.rs"

[[example]]
name = "resource_inspector"
path = "examples/quick/resource_inspector.rs"

[[example]]
name = "filter_query_inspector"
path = "examples/quick/filter_query_inspector.rs"

[[example]]
name = "asset_inspector"
path = "examples/quick/asset_inspector.rs"

[[example]]
name = "world_inspector"
path = "examples/quick/world_inspector.rs"

[[example]]
name = "world_inspector_assets"
path = "examples/quick/world_inspector_assets.rs"

[[example]]
name = "state_inspector"
path = "examples/quick/state_inspector.rs"

[[example]]
name = "egui_dock"
path = "examples/integrations/egui_dock.rs"

[[example]]
name = "side_panel"
path = "examples/integrations/side_panel.rs"
